implementing AttributeEditOptions.vm template displays correct data, but action is not yet fully implemented.
removed Error.vm property as it does not exist and the Error screen works
better without it.

note some try/catch blocks for debugging, because exceptions are being swallowed
 somewhere and not reported.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -24,3 +24,14 @@
         <font color="red">$attrInput.get($fieldName).Message</font>
     #end
 #end
+
+
+#macro ( numericSelect $name $first $last $selected $size )
+
+    <select name="$name" size="$size">
+    #foreach ( $i in [$first..$last] )
+        <option value="$i" #if ($i==$selected)selected #end>$i</option>
+    #end          
+    </select>
+
+#end      
