implemented Recyclable in ScarabRequestTool
modified Attribute editor a bit, so that AttributeShow.vm generally has
a default selection.
Simplified the action method, as the action does not need to populate
the pull tool.

some tweaks to entering an issue screens regarding required attributes.


PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -25,6 +25,12 @@
     #end
 #end
 
+#macro ( pageErrorMsg )
+    #if ($data.Message)
+        <font color="red">$data.Message</font>
+    #end
+#end
+
 
 #macro ( numericSelect $name $first $last $selected $size )
 
