--- a/src/templates/screens/admin/AttributeShow.vm
+++ b/src/templates/screens/admin/AttributeShow.vm
@@ -8,9 +8,7 @@ Please select an attribute from the list below, then click the "Modify
 Attribute" button:
 </p>
 
-<p>
-#pageErrorMsg()
-</p>
+<p>#actionErrorMsg()</p>
 
 <form action="$link.setPage("admin,AttributeShow.vm")" method="GET">
     <input type="hidden" name="action" value="admin.ModifyAttributes">
@@ -26,6 +24,13 @@ Attribute" button:
 #else
     #set ($selected = " selected")
 #end
+
+
+<p>
+    #if ( !$attgroup.Id.isValid() )
+        <font color="red">$attgroup.Id.Message</font>
+    #end
+</p>
 
     <select name="$attgroup.Id.Key" size="5">
 #foreach( $attribute in $module.AllAttributes )
