added a couple join tables to allow modules to specify the options and to specify a hierarchy in the options.
The module_option relationships are pretty much working, so that it is still
possible to enter issues.  The attribute editor may be broken and it
set up to edit attributes on a global basis.  A module_option editor
will need to be built.

The option hierarchy is still not functional.


PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -1,13 +1,14 @@
 #macro ( attrValueSelect $attrValue $optionFieldName $size )
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
     #set ( $attr = $attrValue.Attribute )
+    #set ( $module = $attrValue.Issue.Module )
         <input type="hidden" name="$attrInput.CID" value="$attrInput.OID">
 
         <select name="$attrInput.OptionId.Key" #if($size.length())size="$size"#end>
             #if ($size.length() == 0)
             <option value="">Choose...</option>
             #end
-            #foreach ($option in $attr.AttributeOptions)
+            #foreach ($option in $module.getRModuleOptions($attr))
               #set ( $selected = "" )
               #if ( $option.OptionId == $attrInput.get($optionFieldName).Value.Value )
                 #set ( $selected = " selected" )
