--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -33,7 +33,7 @@
 #set ( $attrValue = $issue.ModuleAttributeValuesMap.get("PLATFORM") )
 #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
 #if ( $attrValue.isRequired() )
-    $attrInput.get("OptionId").setRequired(true)
+##    $attrInput.OptionId.setRequired(true)
         <b>*</b>
 #end
 Platform:<br>
@@ -45,7 +45,7 @@ Platform:<br>
 #set ( $attrValue = $issue.ModuleAttributeValuesMap.get("OPERATING SYSTEM") )
 #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
 #if ( $attrValue.isRequired() )
-    $attrInput.get("OptionId").setRequired(true)
+##    $attrInput.OptionId.setRequired(true)
         <b>*</b>
 #end
 OS:<br>
