--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -2,7 +2,6 @@
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
     #set ( $attr = $attrValue.Attribute )
     #set ( $module = $attrValue.Issue.Module )
-        <input type="hidden" name="$attrInput.CID" value="$attrInput.OID">
 
         <select name="$attrInput.OptionId.Key" #if($size.length())size="$size"#end>
             #if ($size.length() == 0)
@@ -10,7 +9,7 @@
             #end
             #foreach ($option in $module.getRModuleOptions($attr))
               #set ( $selected = "" )
-              #if ( $option.OptionId == $attrInput.get($optionFieldName).Value.Value )
+              #if ( $option.OptionId == $attrInput.get($optionFieldName).Value )
                 #set ( $selected = " selected" )
               #end
               <option$selected value="$option.OptionId">
